# gitswitch

./: .gitignore  Makefile  README.md  accounts.example.toml  pyproject.toml  test_bench.py
src/gitswitch/: __init__.py  accounts.py  colors.py  config.py  constants.py  display.py  doctor.py  error_handling.py  exceptions.py  git_ops.py  interactive.py  main.py  utils.py  validation.py
